samples/_failures_safe/1761500536_0e83b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18dca446.c: In function ‘main’:
./samples/SAFE/__tmp_18dca446.c:158:9: error: expected declaration or statement at end of input
  158 |         if (scanf("%d %d %d", &from, &to, &weight) != 3) {
      |         ^~
./samples/SAFE/__tmp_18dca446.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_18dca446.c:158:9: error: expected declaration or statement at end of input
